feat: add Docker Compose for local development (PostgreSQL + RabbitMQ)
- docker-compose.yml with 3 services: app, postgres (16-alpine), rabbitmq (3.13-management)
- Multi-stage Dockerfile for Spring Boot (temurin:21-jdk build, 21-jre runtime)
- Healthchecks for postgres and rabbitmq with depends_on conditions
- Named volumes for persistent data (postgres_data, rabbitmq_data)
- Fix Mockito/Java 21 compatibility: add -XX:+EnableDynamicAgentLoading to surefire